# sufr

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  mk_test_files.py
.github/workflows/: release.yml  update_release_table.py
data/expected/: 1.sufr  1d.sufr  1m.sufr  1n.sufr  2.sufr  2d.sufr  2n.sufr  2ns.sufr  2s.sufr  3.sufr  abba.sufr  locate-abs.out  locate1.out  locate2.out  locate_long_dna.out  locate_long_dna_mql_6.out  long_dna_sequence.sufr  long_dna_sequence_allow_ambiguity.sufr  uniprot-masked.sufr  uniprot-search-masked-absolute.out  uniprot-search-masked-mql-3.out  uniprot-search-masked.out  uniprot-search1.out  uniprot.sufr
data/inputs/: long_dna_sequence.fa  mostlya1.fa  mostlya2.fa  smol.fa  spaced_input.fa  uniprot.fa
libsufr/: Cargo.toml  README.md
libsufr/src/: file_access.rs  lib.rs  suffix_array.rs  suffix_search.rs  sufr_builder.rs  sufr_file.rs  sufr_search.rs  types.rs  util.rs
libsufr/tests/expected/: 1.sufr  2.sufr
libsufr/tests/inputs/: 1.sufr  2.sufr  abba.fa  abba.sufr
src/: lib.rs  main.rs  suffix_array.rs
sufr/: Cargo.toml  README.md
sufr/src/: lib.rs  main.rs
sufr/tests/: cli.rs
sufr/tests/expected/: 1.sufr  1n.sufr  1s.sufr  2.sufr  2d.sufr  2n.sufr  2ns.sufr  2s.sufr  3.sufr
sufr/tests/inputs/: 2.fa  2.sufr
tests/: cli.rs
tests/expected/: 1.sufr  2.sufr  3.sufr  seq1.read.1-10.out  seq1.read.1-5.out  seq1.read.5-10.out  seq1.sa
tests/inputs/: 1.fa  3.fa  seq1.txt  seq2.txt  test.fa
