[package]
name = "libsufr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.16"
bincode = "1.3.3"
env_logger = "0.11.5"
format_num = "0.1.0"
log = "0.4.22"
needletail = "0.5.1"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.12.0"
